Improved batch approval endpoints
