# src/main/resources/api-definition.yaml
@@ -31,29 +31,22 @@ schemas:
       }
 
 
-  - requisitionDto: |
+  - approveRequisitionDto: |
       {   "type": "object",
           "$schema": "http://json-schema.org/draft-04/schema",
-          "title": "RequisitionDto",
-          "description": "A single requisitionDto",
+          "title": "ApproveRequisitionDto",
+          "description": "A single requisitionDto for batch approval",
           "properties": {
               "id": { "type": "string", "title": "id" },
-              "createdDate": {"type": "array", "title": "createdDate", "items": {"type": "integer" }, "uniqueItems": false },
               "facility": { "type": "object", "$ref": "schemas/facilityDto.json", "title": "facility" },
-              "program": { "type": "object", "$ref": "schemas/programDto.json", "title": "program" },
-              "supplyingFacility" : {"type": ["string", "null"], "title": "supplyingFacility"},
-              "status": { "type": "string", "title": "status" },
-              "emergency": { "type": "boolean", "title": "emergency" },
-              "supervisoryNode": { "type": "string", "title": "supervisoryNode" },
               "processingPeriod": { "type": "object", "$ref": "schemas/processingPeriodDto.json", "title": "processingPeriod" },
-              "draftStatusMessage": { "type": "string", "title": "draftStatusMessage" },
-              "requisitionLineItems": { "type": "array", "title": "requisitionLineItems", "items": { "type": "object", "$ref":"#/schemas/requisitionLineItemDto" }, "uniqueItems": false }
+              "requisitionLineItems": { "type": "array", "title": "requisitionLineItems", "items": { "type": "object", "$ref":"#/schemas/approveRequisitionLineItemDto" }, "uniqueItems": false }
           },
           "required": ["id", "facility", "program", "processingPeriod", "status", "supervisoryNode"]
       }
 
 
-  - requisitionLineItemDto: |
+  - approveRequisitionLineItemDto: |
       {   "type": "object",
           "$schema": "http://json-schema.org/draft-04/schema",
           "title": "RequisitionLineItemDto",
@@ -61,22 +54,16 @@ schemas:
           "properties": {
               "id": { "type": "string", "required": true, "title": "id" },
               "orderable": { "type": "object", "$ref": "#/schemas/orderableDto", "required": true, "title": "orderable" },
-              "beginningBalance": { "type": "integer", "required": false, "title": "beginningBalance" },
-              "totalReceivedQuantity": { "type": "integer", "required": false, "title": "totalReceivedQuantity" },
-              "totalLossesAndAdjustments": { "type": "integer", "required": false, "title": "totalLossesAndAdjustments" },
-              "stockOnHand": { "type": "integer", "required": false, "title": "stockOnHand" },
-              "requestedQuantity": { "type": "integer", "required": false, "title": "requestedQuantity" },
-              "totalConsumedQuantity": { "type": "integer", "required": false, "title": "totalConsumedQuantity" },
-              "requestedQuantityExplanation": { "type": "string", "required": false, "title": "requestedQuantityExplanation" },
-              "remarks": {"type": "string", "required": true, "title": "remarks" },
               "approvedQuantity": {"type": "integer", "required": true, "title": "approvedQuantity" },
-              "total": {"type": "integer", "required": false, "title": "total" },
               "pricePerPack": {"type": "number", "required": false, "title": "pricePerPack" },
-              "numberOfNewPatientsAdded": {"type": "number", "required": false, "title": "numberOfNewPatientsAdded" },
-              "skipped": {"type": "boolean", "required": false, "title": "skipped" },
-              "adjustedConsumption": {"type": "number", "required": false, "title": "adjustedConsumption" },
-              "averageConsumption": {"type": "number", "required": false, "title": "averageConsumption" }
+              "skipped": {"type": "boolean", "required": false, "title": "skipped" }
           }
+      }
+
+  - approveRequisitionDtoArray: |
+      {
+          "type": "array",
+          "items": { "type": "object", "$ref": "#/schemas/approveRequisitionDto" }
       }
 
 
@@ -111,7 +98,7 @@ schemas:
           "title": "RequisitionsProcessingStatus",
           "description": "An array of all requsitions that have been processed successfully and an array of errors.",
           "properties": {
-              "requisitions": { "type": "object", "$ref": "#/schemas/requisitionDtoArray" },
+              "requisitions": { "type": "object", "$ref": "#/schemas/approveRequisitionDtoArray" },
               "errors": { "type": "object", "$ref": "#/schemas/requisitionErrorArray" }
           }
       }
@@ -233,7 +220,19 @@ resourceTypes:
 /api:
   /requisitions:
       displayName: Requisition
-      /approve:
+      /batch:
+          post:
+              is: [ secured ]
+              body:
+                  application/json:
+                      schema: uuidArray
+              description: Attempts to retrieve requisitions with UUIDs provided in the request body.
+              responses:
+                  "200":
+                      body:
+                        application/json:
+                            schema: requisitionsProcessingStatus
+      /batch/approve:
           post:
               is: [ secured ]
               body:
@@ -249,7 +248,7 @@ resourceTypes:
                       body:
                         application/json:
                             schema: requisitionsProcessingStatus
-      /save:
+      /batch/save:
           put:
               is: [ secured ]
               body:
